--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Rock Paper Scissors</h1>
+
+    <button type="text" id="prock" onclick="a()">rock</button>
+    <!--
+    <button type="text" id="ppaper">paper</button>
+    <button type="text" id="pscissors">scissors</button>
+     -->
+
     <script src="app.js"></script>
   </body>
 </html>
