--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
   <body>
     <h1>Rock Paper Scissors</h1>
 
-    <button type="text" id="prock" onclick="a()">rock</button>
-    <!--
-    <button type="text" id="ppaper">paper</button>
-    <button type="text" id="pscissors">scissors</button>
-     -->
+    <button type="text" id="rock" onclick="rock()">rock</button>
+    <button type="text" id="paper" onclick="paper()">paper</button>
+    <button type="text" id="scissors" onclick="scissors()">scissors</button>
 
     <script src="app.js"></script>
   </body>
